[package]
name = "chargemap-proxy"
version = "0.5.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tower-http = { version = "0.6.8", features = ["trace", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15.19"
anyhow = "1.0.102"
http = "1.4.0"
csv = "1.4.0"


[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }

[lib]
name = "chargemap_proxy"
path = "src/lib.rs"
